nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-app-pod
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
